--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 absl-py>=0.5.0
 numpy>=1.13.3
-tensorflow>=1.13.0
+tensorflow==2.16.1
 tensorflow-serving-api>=1.13.0
 gin-config>=0.1.4
-pybullet==2.5.0
+pybullet
 Pillow==5.3.0
 gym>=0.10.9
 tensorflow-probability>=0.6.0
